--- a/src/main/assets/nb_about.html
+++ b/src/main/assets/nb_about.html
@@ -1,9 +1,9 @@
-Web page
+Nettsteder
 <br/>&nbsp;&nbsp;<a href="https://groups.google.com/d/forum/whereyougo">https://groups.google.com/d/forum/whereyougo</a>
 <br/>&nbsp;&nbsp;<a href="mailto:whereyougo@googlegroups.com/">whereyougo@googlegroups.com</a>
 <br/>&nbsp;&nbsp;<a href="https://github.com/biylda/WhereYouGo/blob/master/PRIVACY.md">Privacy policy</a>
 <br/><br/>
-Author
+Utvikler
 <br/>&nbsp;&nbsp;<b>Menion Asamm</b>
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;
 <small><a href="https://code.google.com/p/android-whereyougo/">https://code.google.com/r/android-whereyougo</a>
@@ -11,8 +11,7 @@ Author
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;
 <small><a href="http://forum.locusmap.eu/">http://forum.locusmap.eu</a></small>
 <br/><br/>
-Current development
-<br/>&nbsp;&nbsp;<b>biylda</b>
+Nåværende uviklere<br/>&nbsp;&nbsp;<b>biylda</b>
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;
 <small><a href="https://github.com/biylda/WhereYouGo">https://github.com/biylda/WhereYouGo</a>
 </small>
@@ -21,18 +20,18 @@ Current development
 <small><a href="https://code.google.com/r/cachingfox-whereyougo/">https://code.google.com/r/cachingfox-whereyougo</a>
 </small>
 <br/>&nbsp;&nbsp;<b>Jochen Sprickerhof (jspricke)</b>
-<br/>&nbsp;&nbsp;<b>This edition is tweaked by cghove</b>
-<br/>&nbsp;&nbsp;&nbsp;
 <br/><br/>
-Translation
-<br/>&nbsp;&nbsp;<b>Deutsch</b> - Stefan Amstart, Kilian Hägy, Carsten Pietzsch, Lars (Lineflyer)
-<br/>&nbsp;&nbsp;<b>Français</b> - Nam (ldmpub), Surfoo
+<br/>&nbsp;&nbsp;<b>Denne utgaven er tweaket av cghove</b>
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;
+Oversettelser
+<br/>&nbsp;&nbsp;<b>Tysk</b> - Stefan Amstart, Kilian Hägy, Carsten Pietzsch, Lars (Lineflyer)
+<br/>&nbsp;&nbsp;<b>Fransk</b> - Nam (ldmpub), Surfoo
 <br/>&nbsp;&nbsp;<b>Dansk</b> - Jens Hyllegaard
 <br/>&nbsp;&nbsp;<b>Norsk bokmål</b> - cghove (www.cachetur.no)
-<br/>&nbsp;&nbsp;<b>Català</b> - Sònia Oliveras i Artau
-<br/>&nbsp;&nbsp;<b>日本語</b> - naofum
+<br/>&nbsp;&nbsp;<b>Katalansk</b> - Sònia Oliveras i Artau
+<br/>&nbsp;&nbsp;<b>Japansk</b> - naofum
 <br/><br/>
-Libraries
+Biblioteker i bruk
 <br/>&nbsp;&nbsp;<b>OpenWIG</b>
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;matejcik
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;
